--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "archiver": "^7.0.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
