--- a/server/package.json
+++ b/server/package.json
@@ -1,34 +1,32 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Esbo Project Backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "archiver": "^7.0.1",
-    "axios": "^1.11.0",
-    "bcryptjs": "^3.0.2",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.66.0",
-    "socket.io": "^4.8.1",
+    "socket.io": "^4.7.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^11.1.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.0"
   }
 }
